Apply wrapper settings to fix side facet height-based truncation.

--- a/themes/bootstrap3/less/components/sidebar.less
+++ b/themes/bootstrap3/less/components/sidebar.less
@@ -172,9 +172,6 @@ body.rtl .full-facet-list .active .fa.fa-times { float: left; }
 .truncate-facets {
   overflow: hidden;
 }
-.more-btn.facet {
-  border-top: 1px solid @list-group-border;
-}
 
 .facet-range-form {
   width: 100%;
